// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateOfBirth.vue renders error message 1`] = `
<fieldset>
  <label
    class="subtitle has-margin-top-36"
    for="birthDate"
  >
    membership_form_birth_date_label
  </label>
  <div
    class="field"
  >
    <div
      class="control is-clearfix has-icons-right"
    >
      <input
        autocomplete="on"
        class="input is-danger"
        id="birthDate"
        name="birthDate"
        placeholder="membership_form_birth_date_placeholder"
        type="text"
      />
      <!--v-if-->
      <span
        class="icon is-right has-text-danger"
      >
        <i
          class="mdi mdi-alert-circle mdi-24px"
        />
      </span>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <span
    class="help is-danger"
  >
    membership_form_birth_date_error
  </span>
</fieldset>
`;

exports[`DateOfBirth.vue renders field 1`] = `
<fieldset>
  <div
    class="field"
  >
    <div
      class="form-field form-field-text"
    >
      <label
        class="form-field-label"
        for="birthDate"
      >
        membership_form_birth_date_label
      </label>
      <div
        class="control text-form-input"
      >
        <input
          autocomplete="on"
          class="input"
          id="birthDate"
          name="birthDate"
          placeholder="membership_form_birth_date_placeholder"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <span
        class="field-info-message"
      >
        
        
      </span>
    </div>
  </div>
  <span
    class="help has-text-dark-lighter"
  >
    membership_form_birth_date_help_text
  </span>
</fieldset>
`;
